# yinjector

./: .gitignore  Cargo.toml  LICENSE.txt  build.rs  config.json  config.toml  publish.ps1  readme.md  release.ps1
.cargo/: config
core/: Cargo.toml  build.rs
core/crates/wow64ext-rs/: Cargo.toml  build.rs
core/crates/wow64ext-rs/ffi/rewolf-wow64ext/src/: wow64ext.cpp
core/crates/wow64ext-rs/src/: lib.rs  wow64ext.rs
core/crates/yapi-rs/: build.rs
core/crates/yapi-rs/src/: wrapper.h  yapi.rs
core/src/: main.rs
core/src/core/: config.rs  controller.rs  executor.rs  monitor.rs  util.rs
crates/wow64ext-rs/: Cargo.toml  build.rs
crates/wow64ext-rs/ffi/: wrapper.cpp
crates/wow64ext-rs/src/: wrapper.h
crates/yapi-rs/: build.rs
crates/yapi-rs/ffi/: wrapper.cpp
dlls/: dllmain.cpp
injector/: Cargo.toml
injector/src/: main.rs
injector/src/injector/: config.rs  mod.rs  monitor.rs  process.rs  util.rs  window.rs
pretty_env_logger_custom/: Cargo.toml
pretty_env_logger_custom/src/: lib.rs
src/: main.rs
src/core/: config.rs  controller.rs  err.rs  executor.rs  mod.rs  monitor.rs  process.rs  util.rs  window.rs
src/injector/: config.rs  mod.rs  monitor.rs
test_dll/: Cargo.toml
test_dll/src/: lib.rs
windows-win-rs/: Cargo.toml  README.md
windows-win-rs/src/: lib.rs
windows-win-rs/src/raw/: mod.rs
windows-win-rs/tests/: windows.rs
yapi-rs/: Cargo.toml  build.rs
yapi-rs/ffi/: yapi.cpp
yapi-rs/ffi/yapi/demo/: demo.vcxproj
yapi-rs/src/: lib.rs
