[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0"
log = "0"
pretty_env_logger = "0"
yapi-rs = { path = "yapi-rs" }
# windows-win = { path = "../windows-win-rs" }

scopeguard = "1"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }


[dependencies.windows]
version = "0"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
]

[build-dependencies]
# must use msvc-compiler
winres = "^0.1"
