[package]
name = "yapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yapi_rs"
path = "src/lib.rs"

[dependencies]
cty = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.68.1"
